# valence

./: .dockerignore  .env.example  .gitignore  AUDIT-STATUS.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COVERAGE.md  Dockerfile  Dockerfile.test  LICENSE  Makefile  QA.md  README.md  V02_TEST_COVERAGE_REPORT.md  codecov.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  schema.sql  schema_conversations.sql  schema_embeddings.sql  valence-mcp  valence.kb.sqlite
.github/: dependabot.yml
docs/: API.md  ERROR-CODES.md  GDPR.md  GOVERNANCE.md  IMPLEMENTATION-STATUS.md  MCP_INTEGRATION.md  NAMING-DECISIONS.md  PRINCIPLES.md  RATE-LIMITS.md  RELEASE-CHECKLIST.md  RESILIENT_STORAGE.md  SUBAGENT-WORKFLOW.md  SYSTEM.md  TRUST_MODEL.md  UNKNOWNS.md  architecture.md  cli-reference.md  crypto-status.md  getting-started.md  openapi.yaml
examples/: 01_hello_belief.py  02_trust_graph.py  03_federation.py  demo.py
infra/: .env.example  README.md  inventory.yml  site.yml
migrations/: 003_foundation_fixes.sql  004_compliance.sql  005_verification.sql  006_incentives.sql  007-federation.sql  007_consensus.sql  008_backup.sql  009_fix_procedure_vectors.sql  010_configurable_embeddings.sql  011_hnsw_indexes.sql  012_belief_archival.sql  013_retention_policies.sql  014_table_partitioning.sql  015_materialized_views.sql  017_slashing_events.sql  018_merkle_commit_reveal.sql  020_schema_convergence.sql  022_add_openclaw_platform.sql  023_v2_knowledge_system.py  023_v2_knowledge_system.sql
plugin/: .mcp.json
scripts/: check  ci-status  download_model.py  (+8 more)
(+501 files in other folders)
